tests/paczka1/small_fuzzy/11307668.err
Error in line 8: rTFFSz S548 98,s
Error in line 10: rTFFSz S548 445,7
Error in line 14: 6FQ8TdH S327 17,0
